@@ -107,6 +107,7 @@ Release 0.19.0 - Unreleased
    HBASE-1052  Stopping a HRegionServer with unflushed cache causes data loss
                from org.apache.hadoop.hbase.DroppedSnapshotException
    HBASE-1059  ConcurrentModificationException in notifyChangedReadersObservers
+   HBASE-1063  "File separator problem on Windows" (Max Lehn via Stack)
 
   IMPROVEMENTS
    HBASE-901   Add a limit to key length, check key and value length on client side
